[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = Tree shaking for the minimal viable SBOM.
home_page = https://github.com/sthagen/sbom

keywords =
    baseline
    cyclonedx
    development
    extension
    software-bill-of-materials
    spdx
    validation

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = sbom

project_urls =
    Bug Tracker = https://github.com/sthagen/sbom/issues
    Documentation = https://sthagen.github.io/sbom
    Source Code = https://github.com/sthagen/sbom

url = https://github.com/sthagen/sbom
version = 2022.7.17


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Build Tools

[options]
python_requires = >=3.8

install_requires =
    attrs >= 22.1.0
    cyclonedx-bom >= 3.6.3
    jsonschema >= 4.16.0
    spdx-tools >= 0.6.1
    typer >= 0.6.1
    xmlschema >= 2.0.4

packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    sbom=sbom.cli:app

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    pytest
    pytest-cov
    pytest-flake8

[bdist_wheel]
universal = True


[tool:pytest]
testpaths = test
filterwarnings = error

[flake8]
max-line-length = 120
max-complexity = 42
inline-quotes = '
multiline-quotes = """
ignore = E203, W503
[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=sbom
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
